--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,10 @@ a{
     justify-content: center
 }
 
-
+.nav-mid-s{
+        height: 50%;
+        width: 100%;
+    }
 .nav-mid{
     height: 50%;
     width: 100%;
@@ -146,6 +149,7 @@ a{
 .nav-bot div{
     display: flex;
     align-items: center; 
+    justify-content: center;
 }
 
 .nav-bot div:first-child > img{
@@ -154,7 +158,7 @@ a{
 
 .nav-bot div:last-child {
     margin-top: 5px;
-    border-top: 1px solid white;
+    border-top: 1px solid black;
     padding-top: 5px;
 }
 /* .nav-bot div:last-child > div > img{
@@ -177,18 +181,50 @@ a{
     margin-right: 10px;
 }
 
-
-
-
 .display-none{
     display: none;
 }
 
 
+.container-main{
+    width: 100%; 
+    margin-right: auto; margin-left: auto;
+    margin-top: 80px;
+}
+
+#menu{
+    display: flex;
+    flex-wrap: wrap;
+    text-transform: uppercase;
+    color: white;
+    justify-content: space-around;
+    height: 80px;
+}
+#menu > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* flex-basis: calc((100% / 4) - 10%); */
+    flex-basis: calc(100% / 4 - 2%)
+    
+}
+
+#menu > div > a{
+    white-space: nowrap;
+    font-size: 14px;
+}
+#menu > div:first-child{
+        border-bottom: 1px solid greenyellow;
+    }
+/* prossimo step da fare: trasformare questa sezione nei media query */
+
+
+
 /* mobile */
-@media only screen and (min-width: 450px ){
+@media only screen and (min-width: 450px){
     #side-bar{
         width: 200px;
+        height: 100%;
     }
     #main{
         width: calc(100% - 200px);
@@ -209,5 +245,51 @@ a{
         margin-left: auto;
         margin-right: auto;
     }
+    
+    .nav-bot{
+        height: 70px;
+        width: 100%;
+        color: white;
+        justify-self: flex-end;
+    }
+    .nav-bot div:last-child {
+        margin-top: 5px;
+        border-top: 1px solid white;
+        padding-top: 5px;
+    }
+    .nav-bot div{
+        display: flex;
+        align-items: center; 
+        justify-content: flex-start;
+    }
+    #menu > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-basis: calc(100% / 3 - 2%);
+    }
+
+    
+    
 }
 
+/* tablet */
+@media only screen and (min-width: 768px){
+    #menu > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-basis: calc(100% / 5 - 2%);
+    }
+}
+
+
+/* pc */
+@media only screen and (min-width: 1024px){
+    #menu > div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-basis: calc(100% / 6 - 2%);
+    }
+}
